# lunaris-ai-api

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: README.md
docs/endpoints/: chat.md  completions.md  embeddings.md  finetuning.md  models.md
src/: config.rs  lib.rs  main.rs  storage.rs  tracking.rs  types.rs
src/providers/: assemblyai.rs  cerebras.rs  codestral.rs  cohere.rs  gemini.rs  github.rs  groq.rs  jimmy.rs  mistral.rs  mod.rs  nvidia.rs  openrouter.rs  placeholders.rs  speechmatics.rs
